# greatlittle.software

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile  wrangler.toml
.claude/skills/write-article/: SKILL.md
.github/DISCUSSION_TEMPLATE/: show-and-tell.yml
.github/workflows/: ci.yml
assets/: robots.txt
content/: article.tpl.md  index.md
content/about/: index.md
content/blog/crit-your-feedback-loop-with-the-agent/: index.md
content/blog/evilcorp-syndrome/: index.md
content/blog/papra-open-source-document-management-platform/: index.md
content/blog/psikat-tracker-like-daw/: index.md
content/privacy/: index.md
content/psikat-tracker-like-daw/: index.md
examples/: run_blog.rs
functions/: _middleware.js
macros/src/: lib.rs  preview.rs
public/: robots.txt
public/.well-known/: api-catalog
src/: lib.rs  main.rs  markdown.rs  rss.rs  sitemap.rs
src/about/: about.css  about.html  mod.rs
src/blog/: article.css  article.html  article.ld.json  breadcrumbs.css  breadcrumbs.html  card.css  card.html  card.rs  index.css  index.html  mod.rs
src/dev/: mod.rs  reload.html  reload.js
src/home/: intro.css  intro.rs  layout.css  layout.html  mod.rs
src/html/: mod.rs  template.rs
src/preview/: globals.css  globals.js  index.css  index.html  index.js  mod.rs  wrapper.html
src/privacy/: mod.rs  privacy.css  privacy.html
src/theme/: mod.rs  root.css
tests/: html_template.rs
tests/fixtures/: example.html  looped.html  repeated.html  scalars_only.html  slotted.html
worker/: Cargo.toml
worker/src/: lib.rs
(+46 files in other folders)
