[workspace]
members = ["macros", "worker"]

[package]
name = "greatlittle_software"
version = "0.1.0"
edition = "2024"

[dependencies]
macros = { path = "macros" }
minify-html = "0.18.1"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
inventory = { version = "0.3", optional = true }

[features]
preview = ["dep:inventory"]
